# log

./: .clang-format  .gitignore  CMakeLists.txt  README.md  log.h++  main.c++
docs/source/: conf.py  index.rst
include/: ansi.h++  log.h++  log_lib.h++  types.h++
include/log/: instance.h++  internal_debug.h++
include/util/: datetime.h++  level.h++  shortened_path.h++  uintptr.h++
src/: log.c++  log_lib.c++
src/log/: activate.c++  activate_stream_redirect.c++  activated_.c++  close.c++  deactivate.c++  debug_file_is_active_.c++  debug_stream_.c++  debug_tmp_file_create_.c++  debug_tmp_file_reassign_or_cleanup_.c++  error_on_log_file_.c++  flush.c++  full_running.c++  generate_new_session_header_.c++  get_absolute_path.c++  get_instance.c++  is_open.c++  is_set_called_.c++  is_stream_redirect_active_.c++  level_.c++  mkdir_default_.c++  null_stream_.c++  registry_has_item_.c++  set.c++  set_called_.c++  set_instance.c++  set_internal_debug_.c++  set_log_.c++  set_log_registry_.c++  shortened_path_.c++  start.c++  stop.c++  stream.c++
src/log/instance/: close.c++  flush.c++  ident.c++  instance.c++  is_open.c++  start.c++  stop.c++  stream.c++
src/log/internal_debug/: activate_.c++  file_is_active.c++  generate_new_session_header.c++  internal_debug.c++  stream.c++  stream_is_open.c++  stream_is_open_.c++  tmp_file_create_.c++  tmp_file_reassign_or_cleanup_.c++
src/log/stream_redirect_/: stream_redirect_.c++
